# dualis

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  single_header.py
cmake/: dualisConfig.cmake.in
examples/: CMakeLists.txt
examples/bmp/: CMakeLists.txt  README.md  main.cc
src/: concepts.h  containers.h  containers_impl.h  dualis.h  packing.h  streams.h  utilities.h  utilities_impl.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  containers.cc  matchers.h  mock_allocator.h  packing.cc  rw.cc
